# alignment-writer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: make_release.yml
config/: CMakeLists-bxzstr.txt.in  CMakeLists-telescope.txt.in  alignment-writer_openmp_config.hpp.in
deploy/linux/: build.sh
deploy/macOS/: build.sh
include/: Alignment.hpp  merge.hpp  pack.hpp  parser.hpp  printer.hpp  unpack.hpp  version.h.in
src/: alignment_writer.cpp  main.cpp  merge.cpp  pack.cpp  unpack.cpp
